Commit do sono.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>This is the first page</title>
   </head>
-  <body></body>
+  <body>
+  <!-- Just to remember how to comment in HTML -->
+    <h1>This is the main title!</h1>
+      <p>This is a paragraph</p>
+      <p>This is the second paragraph, that i am <strong>writing</strong> just to break the line</p></br>
+      <p>This is the third paragraph. This means that we had a broken line just ahead.</p>
+    <h2>This is the second title!</h2>
+      <a href="https://www.google.com/">This is a link for google!</a>
+  </body>
 </html>
+<!-- Ctrl + Slash to shortcut for comments -->
