--- a/A/index.html
+++ b/A/index.html
@@ -8,7 +8,7 @@
   <body>
   <h1>Yu-Gi-Oh - The Card Game</h1>
     <p>Seto to Ati: Seto to Ati:</p>
-    <p>"If I got 1 cent every time you said the word fate, I would be the richest man in the world right now."</p>
+    <pre>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"If I got 1 cent every time you said the word fate, I would be the richest man in the world right now."</pre>
   <h2>What is the Yu-Gi-Oh! card game?</h2>
     <p>The Yu-Gi-Oh! TRADING CARD GAME lets you take part in the action-packed card game you know from the Yu-Gi-Oh! TV and comic book mega-hits yourself.</p>
     <p>In this game, two players duel using a variety of monsters and Spell and Trap cards to defeat the opponent's monsters and be the first to bring the opponent's Life Points to 0.</p>
@@ -18,7 +18,10 @@
     <a href="www. yugioh-card.com">www.yugioh-card.com</a>
     <p>if you are looking for answers to frequently asked questions or an interactive demo.</p>
   <h3>About the game</h3>
-    <p>Build your own deck</p>
+
+    <ul>
+    <p><li>Build your own deck (Collapsible)</p></li>
+    </ul>
     <p>You can build your deck from your favorite cards and customize it to your preferences, choosing from thousands of cards! Each Duelist will have their own unique deck, completely different from every other Duelist's deck, which makes playing incredibly exciting!</p>
   <h4>Battles with awesome monsters and great combos</h4>
     <p>New booster packs are released regularly every few months, bringing your deck new cards, new combos, and thus new power. Decks evolve every time a new card set is released, so your duels are always cool and exciting!</p>
