--- a/A/index.html
+++ b/A/index.html
@@ -8,8 +8,7 @@
   <body>
     <h1>Yu-Gi-Oh - The Card Game</h1>
       <p>Seto to Ati: Seto to Ati:</p>
-      <pre>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"If I got 1 cent every time you said
-        the word fate, I would be the richest man in the world right now."</pre>
+      <pre>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"If I got 1 cent every time you said the word fate, I would be the richest man in the world right now."</pre>
     <h2>What is the Yu-Gi-Oh! card game?</h2>
       <p>The Yu-Gi-Oh! TRADING CARD GAME lets you take part in the action-packed card game you
         know from the Yu-Gi-Oh! TV and comic book mega-hits yourself.</p>
