Commit from 09:57 -- DLH

--- a/index.html
+++ b/index.html
@@ -13,4 +13,28 @@
       <a href="https://www.google.com/">This is a link for google!</a>
   </body>
 </html>
-<!-- Ctrl + Slash to shortcut for comments -->
+<!-- shift + Ctrl + Slash to shortcut for comments -->
+
+
+
+<hr> <!-- Hr to make a horiyontal line -->
+
+
+<blockquote cite="http://">
+  Blockquote para fazer uma citacao.
+</blockquote>
+
+<summary>para fazer um sumario.</summary>
+
+<pre>estou aqui testando
+para ver como
+como vai funcionar
+a funcao pre</pre>
+
+<abbr title="Digital Learning Hub">DLH</abbr>
+<!-- Abbr - em title mostra o titulo e o DLH a abreviacao. O DLH eh mostrado sublinhado, passando o mouse em cima vemos o titlo -->
+
+<p>Aqui nos podemos utilizar a tag <mark>mark</mark> para deixar algo marcado.</p>
+
+<p>Aqui usamos o SUP para deixar a letra pequenininha. Como em 1 <sup>iro</sup> </p>
+<p>Ou usamos SUB para deixar pequeno, mas embaixo. Como em H<sub>2</sub>0 </p>
