Commit of exercice C - or exercice 3

--- a/B/index.html
+++ b/B/index.html
@@ -18,7 +18,7 @@
               color: #ff0000;
               font-family: Arial, Verdana; }</pre></code>
 
-<p>To boot an Ubuntu operating system, you need to type the command sudo reboot in the<br>
+<p>To boot an Ubuntu operating system, you need to type the command <kbd>sudo reboot 0<kbd/> in the<br>
    terminal and press the <kbd Enter key</kbd>. After that, the operating system responds with the<br>
    message The system is going down and the PC shuts down.</p>
 
