--- a/index.html
+++ b/index.html
@@ -38,3 +38,29 @@ a funcao pre</pre>
 
 <p>Aqui usamos o SUP para deixar a letra pequenininha. Como em 1 <sup>iro</sup> </p>
 <p>Ou usamos SUB para deixar pequeno, mas embaixo. Como em H<sub>2</sub>0 </p>
+
+<hr>
+
+<ul>
+  <li>1 item da lista</li>
+  <li> 2 item da lista</li>
+  <li>3 item da lista</li>
+</ul>
+
+<!-- Para especificar algo na lista' podemos colocar em <ol type ="Item a ser especificado"> Por exemplo - <ol type="I"> -->
+
+<ol>
+  <li>item da lista</li>
+  <li>item da lista</li>
+  <li>item da lista</li>
+</ol>
+
+
+<p>Description list - utilizamos DL como principal e DD para itens</p>
+<p>My todo list:</p>
+<dl>
+  <dt>Home</dt>
+  <dd>Fix bike</dd>
+  <dd>Take kids</dd>
+  <dd>Sleep</dd>
+</dl>
