commit for ex D or 4. Letras M em strong.

--- a/D/index.html
+++ b/D/index.html
@@ -35,7 +35,7 @@
             <tr>
                 <th>10:00-11:00</th>
                 <td rowspan="2">M1<br>Intro</td>
-                <td colspan="2" rowspan="2">M2<br>CSS</td>
+                <td colspan="2" rowspan="2"><strong>M2</strong><br>CSS</td>
             </tr>
 
             <tr>
@@ -52,15 +52,15 @@
             </tr>
             <tr>
               <th>13:00-14:00</th>
-              <td rowspan="5">M1<br>Scratch</td>
-              <td rowspan="5">M2<br>HTML</td>
-              <td rowspan="5">M2<br>CSS</td>
-              <td>M2<br>CSS</td>
-              <td rowspan="5">M3<br>CLISS1</td>
+              <td rowspan="5"><strong>M1</strong><br>Scratch</td>
+              <td rowspan="5"><strong>M2</strong><br>HTML</td>
+              <td rowspan="5"><strong>M2</strong><br>CSS</td>
+              <td><strong>M2</strong><br>CSS</td>
+              <td rowspan="5"><strong>M3</strong><br>CLISS1</td>
             </tr>
             <tr>
               <th>14:00-15:00</th>
-              <td rowspan="4">M3<br>CLISS1</td>
+              <td rowspan="4"><strong>M3</strong><br>CLISS1</td>
             </tr>
             <tr>
               <th>15:00-16:00</th>
