--- a/D/index.html
+++ b/D/index.html
@@ -34,7 +34,7 @@
 
             <tr>
                 <th>10:00-11:00</th>
-                <td rowspan="2">M1<br>Intro</td>
+                <td rowspan="2"><strong>M1</strong><br>Intro</td>
                 <td colspan="2" rowspan="2"><strong>M2</strong><br>CSS</td>
             </tr>
 
