commit exercice E ready

--- a/E/student/index.html
+++ b/E/student/index.html
@@ -14,11 +14,11 @@
     </menu>
     <menu>
       <menu>
-        <li><a href="/home/student/www/E/student/games/shooter/borderlands/borderlands.html">Borderlands</a></li>
+        <li><a href="../student/games/shooter/borderlands/borderlands.html">Borderlands</a></li>
         <li><a href="/home/student/www/E/student/games/shooter/callofduty/callofduty.html">Call of duty<a/></li>
       </menu>
     </menu>
-        <li><a href="/home/student/www/E/student/about_us.html">About Us</a></li>
+        <li><a href="../student/about_us.html">About Us</a></li>
     </menu>
 
   </body>
