--- a/G/images_student.html
+++ b/G/images_student.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="/home/student/www/G/style.css">
     <meta charset="utf-8">
-    <title>The last of us</title>
+    <title>This is exercice G</title>
   </head>
   <body>
   <h1> The Last Of Us </h1>
     <figure>
-      <img src="/home/student/www/F/emspemspemsp📃 Worksheet F-20221214/img/tlou.jpg" alt="The Last of Us Poster">
+      <img class="mainimage" src="/home/student/www/F/emspemspemsp📃 Worksheet F-20221214/img/tlou.jpg" alt="The Last of Us Poster">
       <figcaption>The Last of Us Poster
     </figure>
-  <a href="https://www.playstation.com/fr-lu/games/the-last-of-us-part-i/">  Link to official website </a>
+  <a class="mainlink" href="https://www.playstation.com/fr-lu/games/the-last-of-us-part-i/">  Link to official website </a>
   <h2>  About this game </h2>
     <p>  The Last of Us is a 2013 action-adventure game developed by Naughty Dog and published by Sony Computer Entertainment. Players control Joel, a smuggler tasked with escorting a teenage girl, Ellie, across a post-apocalyptic United States. The Last of Us is played from a third-person perspective. Players use firearms and improvised weapons and can use stealth to defend against hostile humans and cannibalistic creatures infected by a mutated fungus in the genus Cordyceps. In the online multiplayer mode, up to eight players engage in cooperative and competitive gameplay.
     Development of The Last of Us began in 2009, soon after the release of Naughty Dog's previous game, Uncharted 2: Among Thieves. For the first time in the company's history, Naughty Dog split into two teams; while one team developed Uncharted 3: Drake's Deception, the other half developed The Last of Us. The relationship between Joel and Ellie became the focus, with all other elements developed around it. Actors Troy Baker and Ashley Johnson portrayed Joel and Ellie, respectively, through voice and motion capture, and assisted creative director Neil Druckmann with the development of the characters and story. The original score was composed and performed by Gustavo Santaolalla.
