commit exercice at the beggining

--- a/J/pseudo_student.html
+++ b/J/pseudo_student.html
@@ -4,18 +4,7 @@
 <head>
 	<title>CSS Practice Files</title>
 	<meta charset="utf-8">
-	<style>
-		h1,
-		nav,
-		footer {
-			color: #EFECCA;
-			background-color: #002F2F;
-		}
-
-		a {
-			color: #EFECCA;
-		}
-	</style>
+	<link rel="stylesheet" href="/home/student/www/J/style.css">
 </head>
 
 <body>
