--- a/J/pseudo_student.html
+++ b/J/pseudo_student.html
@@ -27,7 +27,7 @@
 		</header>
 
 		<article>
-			<h3>Definition</h3>
+			<h3>Definition - article 1</h3>
 			<p>
 				A <dfn>quotation</dfn> is the repetition of one expression as part of another one, particularly when the quoted expression is well-known or explicitly attributed by citation to its original source, and it is indicated by (punctuated with) quotation
 				marks.
@@ -38,7 +38,7 @@
 		</article>
 
 		<article>
-			<h3>Quotes by <span class="author">Groucho Marx</span></h3>
+			<h3>Quotes by - article 2 - <span class="author">Groucho Marx</span></h3>
 			<blockquote>I worked my way up from nothing to a state of extreme poverty.</blockquote>
 			<blockquote>Quote me as saying I was mis-quoted.</blockquote>
 			<blockquote>Politics is the art of looking for trouble, finding it everywhere, diagnosing it incorrectly and applying the wrong remedies.</blockquote>
@@ -48,7 +48,7 @@
 		</article>
 
 		<article>
-			<h3>Quotes by <span class="author">Douglas Adams</span></h3>
+			<h3>Quotes by article 3<span class="author">Douglas Adams</span></h3>
 			<blockquote>It is a mistake to think you can solve any major problems just with potatoes.</blockquote>
 			<blockquote>For a moment, nothing happened. Then, after a second or so, nothing continued to happen.</blockquote>
 			<blockquote>Flying is learning how to throw yourself at the ground and miss.</blockquote>
@@ -60,7 +60,7 @@
 		</article>
 
 		<article>
-			<h3>Quotes by <span class="author">Terry Pratchett</span></h3>
+			<h3>Quotes by article 4 <span class="author">Terry Pratchett</span></h3>
 			<blockquote>The pen is mightier than the sword if the sword is very short, and the pen is very sharp.</blockquote>
 			<blockquote>Five exclamation marks, the sure sign of an insane mind.</blockquote>
 			<blockquote>I'll be more enthusiastic about encouraging thinking outside the box when there's evidence of any thinking going on inside it.</blockquote>
