commit exercice -K- responsive

--- a/K/boxmodel-student.html
+++ b/K/boxmodel-student.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Navigation Bar</title>
         <link rel="stylesheet" type="text/css" href="boxmodel-student.css">
         <meta charset="UTF-8">
