--- a/M/grid-studentRESPONSIVE.html
+++ b/M/grid-studentRESPONSIVE.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>exercice L - 3</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, inicial-scale=1.0">
+    <title>exercice M</title>
     <link rel="stylesheet" href="/home/student/www/M/grid-student-styleRESPONSIVE.css">
   </head>
   <body>
