Commit first exercices of Javascript.

--- a/A/index.html
+++ b/A/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Yu-Gi-Oh Exercice</title>
+    <script src="/home/student/www/A/javascript.js"></script>
   </head>
   <body>
     <h1>Yu-Gi-Oh - The Card Game</h1>
