--- a/9_JS/index.html
+++ b/9_JS/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="/home/student/www/9_JS/style.css">
     <script src="/home/student/www/9_JS/javascript.js"></script>
   </head>
-  <body onload="defaultBlue()">
+  <body onload="clicked1()">
     <p>Please, choose your payment method:</p>
     <img onclick="clicked1()" id="image1" src="/home/student/www/3_JS/img/mastercard.png" alt="mastercard">
     <img onclick="clicked2()" id="image2" src="/home/student/www/3_JS/img/paypal.png" alt="paypal">
     <img onclick="clicked3()" id="image3" src="/home/student/www/3_JS/img/visa.png" alt="visa"> </br>
 
     <!-- below is exercice 10 of worksheet 2-->
-    <p>Name:<input type="text" id="name"></p>
-    <p>Price:<input type="text" id="price"></p>
-    <p>E-mail:<input type="text" id="email"></p>
+    <label>Name:</label><input type="text" id="name"></br>
+    <label>Price:</label><input type="text" id="price"></br>
+    <label>E-mail:</label><input type="text" id="email"></br>
     <button type="button" name="button" onclick="buttonOnClick()">Pay</button>
     <div id="output">
 
