Commit ex 15 - list etc

--- a/15_JS/index.html
+++ b/15_JS/index.html
@@ -14,7 +14,12 @@
         <input id="genrerCheckBox" type="radio" name="genrer" value="M"><label>Masculine</label>
         <input id="genrerCheckBox" type="radio" name="genrer" value="F"><label>Feminine</label>
       </form>
-      <button type="button" onclick="checkFilled()">Add</button>
+      <button type="button" onclick="checkFilled(); addDataToList();">Add</button>
+      <div id="divOutput">
+      </div>
+      <ol id="list">
+
+      </ol>
     </div>
   </body>
 </html>
