--- a/15_JS/index.html
+++ b/15_JS/index.html
@@ -19,8 +19,8 @@
       <div id="divOutput">
       </div>
       <ol id="list">
-
       </ol>
+      <div id="genrerImage"></div>
     </div>
   </body>
 </html>
