--- a/18_JS/index.html
+++ b/18_JS/index.html
@@ -17,9 +17,8 @@
       <option value="orangejus">Orange jus</option>
       <option value="paysafecard">10€ paysafecard</option>
     </select><br>
-    <label>Preview:</label><div id="previewOutput"></div>
-    <br>
-    <label>Amount:</label><br>
+    <label>Preview:</label><div id="previewOutput"></div><br>
+    <label>Amount:</label>
     <select id="amount">
       <option value="1">X1</option>
       <option value="2">X2</option>
