--- a/16_JS/index.html
+++ b/16_JS/index.html
@@ -7,7 +7,7 @@
     <script src="/home/student/www/16_JS/javascript.js">
     </script>
   </head>
-  <body>
+  <body onload="playerChoise()">
     <div class="button-wrapper">
     <table id="tableId" cellspacing=0 >
       <tr>
